src/containers/Assistants/AssistantOptions/AssistantOptions.module.css
.AssistantOptions {
  margin: 1rem 0;
  display: flex;
  flex-direction: column;
}

.Label {
  font-size: 1rem;
  font-weight: 600;
  color: #555;
  display: flex;
  align-items: center;
  column-gap: 0.5rem;
}

.Files {
  padding-bottom: 1rem;
  border-bottom: 1px solid #e5e2e2;
}

.Temperature {
  display: flex;
  column-gap: 1rem;
  align-items: start;
  padding: 1rem 0;
}

.SliderContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.Slider {
  display: flex;
  align-items: center;
  column-gap: 1rem;
  justify-content: space-between;
}

.SliderDisplay {
  font-size: 15px;
  padding: 4px 12px;
  border: 0.5px solid #a4a4a4;
  border-radius: 4px;
  text-align: center;
}

.Error {
  border-color: #fb5c5c;
}

.ErrorText {
  width: 100%;
  color: #fb5c5c;
  font-size: 0.8rem;
  margin-top: 0.5rem;
  text-align: right;
}

.SliderDisplay:focus {
  outline: none;
}

.FilesHeader {
  display: flex;
  justify-content: space-between;
}

.FilesHeader button {
  border-radius: 10px;
  font-size: 1rem;
  padding: 2px 8px;
  display: flex;
  align-items: center;
  column-gap: 0.5rem;
}

.LabelContainer {
  display: flex;
  align-items: center;
  column-gap: 0.5rem;
}

.DialogContent {
  text-align: center;
  max-height: 40vh;
  display: flex;
  flex-direction: column;
}

.UploadInfo {
  font-size: 0.8rem;
  line-height: 0;
  color: #555;
  display: flex;
  gap: 1.2rem;
  flex-direction: column;
}

.DialogContent span a {
  color: #119656;
  font-weight: 600;
}

.UploadContainer {
  padding: 1rem 0;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  border: 1px solid #119656;
  border-style: dashed;
  width: 100%;
}

.UploadContainer input {
  display: none;
}

.HelperText {
  margin: 0px;
  color: #93a29b;
  line-height: 1.5;
  font-size: 12px;
  margin-top: 7px;
  padding: 0 8px;
}

.FileList {
  display: flex;
  flex-direction: column;
  row-gap: 0.5rem;
  margin: 1rem 0;
  height: 100%;
  overflow-y: scroll;
}

.File {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 0.8rem;
  background-color: #ebf8ee;
  padding: 0.5rem 1rem;
  padding-right: 0;
}

.File div {
  display: flex;
  align-items: center;
  column-gap: 0.8rem;
}

.File span {
  line-height: 1rem;
  text-align: left;
}

.EmptyText {
  font-size: 0.8rem;
  color: #2f2f2f;
  width: 100%;
  text-align: center;
}

.VectorStore {
  display: flex;
  width: 100%;
  background-color: #ebf8ee;
  font-size: 0.8rem;
  padding: 0.5rem 1rem;
  margin: 1rem 0;
  justify-content: space-between;
}

.VectorContent {
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.VectorStore p {
  font-weight: 600;
  margin: 0;
  font-size: 1rem;
}

